# heinerbloch

./: .clang-format  .clang-tidy  .gitmodules  .pre-commit-config.yaml  0001-wip.patch  CMakeLists.txt  LICENSE  README.md  Rakefile  gthr-posix.h
.devcontainer/: Dockerfile  devcontainer.json  install-arm-gnu-toolchain.sh  install-free-rtos-kernel.sh  install-free-rtos-posix.sh  install-openocd.sh  install-pico-sdk.sh  install-picotool.sh  install-quicktype.sh  pico-sdk-0001-refactor-prefix-semaphore-methods-with-pico_.patch  tinyusb-0001-refactor-prefix-semaphore-methods-with-pico_.patch
.github/: actionlint.yaml
.github/workflows/: build-firmware.yaml  ci.yaml
data-models/: foo.schema.json
include/heinerbloch/: BME280.hpp  I2C.hpp  Utilities.hpp  calculator.hpp
libs/: CMakeLists.txt  quicktype.cmake
libs/FreeRTOS/: CMakeLists.txt
libs/FreeRTOS/config/: FreeRTOSConfig.h
libs/FreeRTOS/gthr/: pthread.h
libs/FreeRTOS/gthr/bits/: gthr-default.h
libs/FreeRTOS/gthr/sys/: stat.h
libs/FreeRTOS/mygthr/bits/: gthr-default.h
libs/FreeRTOS/port/: FreeRTOS_POSIX_portable.h
platform/linux/: CMakeLists.txt
platform/linux/src/: main.cpp
platform/rp2350/: CMakeLists.txt
platform/rp2350/src/: I2C.cpp  I2C.hpp  fs_init.cpp  main.cpp
src/: BME280.cpp  I2C.cpp  I2C.hpp  Sht35.cpp  Sht35.hpp  Utilities.cpp  calculator.cpp  fs_init.cpp  main.cpp  sd_hw_config.c  sd_hw_config.cpp
test/: BME280Test.cpp  CMakeLists.txt  I2C.cpp  Sht35Test.cpp  UtilitiesTest.cpp
teststand/: Dockerfile  install-openocd.sh
